--- a/index.html
+++ b/index.html
@@ -7,6 +7,9 @@
     <link rel="stylesheet" href="./style.css">
 </head>
 <body>
+    <h1>he</h1>
+    <h1>hello</h1>
+    <h1>hello</h1>
     <h1>hello</h1>
 </body>
 </html>
